# fastapi-websocket-practice

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/routes/: apis.py  routers.py  websockets.py
app/service/: managers.py  redis.py  sessions.py
