[tool.poetry]
name = "dolim"
version = "0.1.0"
description = ""
authors = ["Jungminchae <minchae3618@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
redis = "^5.0.0"
fastapi-mctools = "^0.4.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
